# Linux-Clipboard

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  build-all.sh  install.sh  walkthrough.md
.github/workflows/: test-installer.yml
src/: config.rs  main.rs
src/backend/: clipboard.rs  db.rs  ipc.rs  mod.rs  ocr.rs  screen_capture.rs  shortcuts.rs  simulator.rs  theme.rs
src/ui/: helpers.rs  mod.rs  tray.rs  window.rs
ui/: app.slint  emoji_panel.slint  history_card.slint  preferences_panel.slint  setup_view.slint  types.slint
web-page/: index.html  install.sh  robots.txt  script.js  sitemap.xml  style.css
